--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "history": "^4.10.1",
+        "markdown-to-jsx": "^7.1.3",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
