--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
+        "sass-loader": "^12.4.0",
         "sockjs": "^0.3.21",
         "sockjs-client": "^1.5.0",
         "string-replace-webpack-plugin": "^0.1.3",
@@ -143,7 +144,7 @@
         "jest-cli": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
         "node-hot-loader": "^1.21.0",
-        "node-sass": "^5.0.0",
+        "node-sass": "^6.0.1",
         "nodemon": "^2.0.7",
         "optimize-css-assets-webpack-plugin": "^5.0.4",
         "postcss": "^8.2.3",
@@ -155,7 +156,6 @@
         "react-addons-test-utils": "^15.6.2",
         "regenerator-runtime": "^0.13.7",
         "rimraf": "3.0.2",
-        "sass-loader": "10.1.0",
         "style-loader": "2.0.0",
         "tailwindcss": "^2.0.2",
         "terser-webpack-plugin": "^5.1.0",
